--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/jwt": "^0.6.3",
+    "@elysiajs/static": "^0.6.0",
     "@elysiajs/swagger": "^0.6.1",
     "elysia": "latest",
     "mysql2": "^3.6.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
     "bun-types": "latest"
