--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cors": "^0.6.0",
     "@elysiajs/jwt": "^0.6.3",
     "@elysiajs/static": "^0.6.0",
     "@elysiajs/swagger": "^0.6.1",
