--- a/package.json
+++ b/package.json
@@ -2,21 +2,28 @@
   "name": "elysia",
   "version": "1.0.50",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "fe:dev": "bun vite",
+    "fe:build": "bun vite build"
   },
   "dependencies": {
     "@elysiajs/cors": "^0.6.0",
     "@elysiajs/jwt": "^0.6.3",
     "@elysiajs/static": "^0.6.0",
     "@elysiajs/swagger": "^0.6.1",
+    "@vitejs/plugin-react-swc": "^3.3.2",
     "elysia": "latest",
     "mysql2": "^3.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17",
-    "typeorm-naming-strategies": "^4.1.0"
+    "typeorm-naming-strategies": "^4.1.0",
+    "vite": "^4.4.9"
   },
   "devDependencies": {
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "bun-types": "latest"
   },
   "module": "src/index.js"
